styled and displayed auth status

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>DigitalRenaissance</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Refresh" content="http://localhost:4200/login" />
 
   <link rel="icon" type="image/x-icon" href="./assets/palette.png">
 
